# latex_ocr

./: .gitignore  config.yaml  dataset.py  eval.py  metrics.py  model.py  pyproject.toml  tokenizer.json  train.py  transformer.py  utils.py  vit.py
